; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_ex_cmds2.c_check_fname.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_ex_cmds2.c_check_fname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@curbuf = common dso_local global %struct.TYPE_2__* null, align 8
@e_noname = common dso_local global i32 0, align 4
@FAIL = common dso_local global i32 0, align 4
@OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_fname() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curbuf, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i32*, i32** %3, align 8
  %5 = icmp eq i32* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %0
  %7 = load i32, i32* @e_noname, align 4
  %8 = call i32 @_(i32 %7)
  %9 = call i32 @EMSG(i32 %8)
  %10 = load i32, i32* @FAIL, align 4
  store i32 %10, i32* %1, align 4
  br label %13

11:                                               ; preds = %0
  %12 = load i32, i32* @OK, align 4
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %11, %6
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @EMSG(i32) #1

declare dso_local i32 @_(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
